	vorausgewählte Gruppen, die in die Zeichen * oder # eingeschlossen
	sind, entfernt (Anregung von ao)

	* fshash.sh: Die Benutzung eines leeren AVM-Telefonbuch führte dazu,
	dass das Telefonbuch immer wieder langwierig eingelesen wurde.

2009-09-11:

	callmonitor-1.16

2010-02-21:

	* webui.sh: Login bei Firmware 54.04.80 funktionierte nicht.
	
	* callmonitor: Bei Bedarf lassen sich nun die Anrufe auf einer anderen
	Box überwachen als auf der, auf der der Callmonitor läuft.
	
	* cgi: Expertenmodus eingeführt, um selten benötigte Funktionen zu
	verstecken.

	* 11880.sh: 11880 hat seine Rückwärtssuche-Seiten überarbeitet.

	callmonitor-1.17

2010-02-24:

	* callmonitor.sh: Argument --version eingeführt

2010-04-09:

	* modreg: Umstellung auf neue Datei-Registrierung; setzt aktuellen
	Freetz-Trunk voraus.

	callmonitor-1.17.1 für freetz-trunk

2010-04-10:

	* Weboberfläche: Alle internen Links korrigieren

	callmonitor-1.17.2 für freetz-trunk

2010-04-21:

	* reverse: DasTelefonbuch und GoYellow angepasst

2010-05-14:

	callmonitor-1.17.3 für freetz-trunk

2010-05-22:

	* samsung.sh: Nachrichten an bestimmte TV-Geräte von Samsung (via SOAP)

2010-05-24:

	callmonitor-1.18

	* goyellow.sh: Wieder verändert; erneut repariert.

2010-06-13:

	* samsung.sh: Bei der Aktion 'samsung' waren Quelle und Ziel
	vertauscht.

2010-06-20:

	* webui.sh: Robustere Implementierung von webui_get

2010-06-24:

	callmonitor-1.18.1

2010-07-24:

	* local_ch.sh: 2. Schweizer Rückwärtssuche: tel.local.ch
	* goyellow.sh: Rückwärtssuche bei GoYellow angepasst

	callmonitor-1.18.2

2010-08-02:

	* reverse.cgi.sh: Make saving work (adapt to Freetz changes)

	callmonitor-1.18.3

2010-08-06:

	* herold_at.sh: Neue Rückwärtssuche für Österreich (beta)

	callmonitor-1.18.4

	* telefonbuch_at.sh: O.Ö. Telefonbuchverlag hat seinen Server umbenannt:
	  www.das-telefonbuch.at => www.dasschnelle.at

	* herold_at.sh: Umlaute wurden verschluckt

	callmonitor-1.18.5